--- a/templates/initialize/app/assets/variables.scss
+++ b/templates/initialize/app/assets/variables.scss
@@ -1,19 +1,28 @@
 // Ref: https://github.com/nuxt-community/vuetify-module#customvariables
-//
-// The variables you want to modify
-// $font-size-root: 20px;
-@import '~vuetify/src/styles/settings/colors';
-$material-light: (
-  table: (
-    hover: map-get($light-blue, 'lighten-5')
-  )
-);
 
-$list-item-action-icon-margin: 16px;
+// 外見の設定
+// $body-font-family: 'Roboto', sans-serif;
+// $font-size-root: 16px;
+// $line-height-root: 1.5;
+$border-radius-root: 8px;
 
-$shadow-key-umbra-opacity: rgba(85, 85, 85, 0.08);
-$shadow-key-penumbra-opacity: rgba(85, 85, 85, 0.06);
-$shadow-key-ambient-opacity: rgba(85, 85, 85, 0.03);
-
+// カードの影の量
 $card-elevation: 4;
-$border-radius-root: 6px;
+
+// グリッドサイズ
+// $grid-breakpoints: (
+//     'xs': 0,
+//     'sm': 600px,
+//     'md': 960px,
+//     'lg': 1280px - 16px,
+//     'xl': 1920px - 16px
+// );
+
+// 影の色
+// $shadow-key-umbra-opacity: rgba(0, 0, 0, 0.2);
+// $shadow-key-penumbra-opacity: rgba(0, 0, 0, 0.14);
+// $shadow-key-ambient-opacity: rgba(0, 0, 0, 0.12);
+
+// ボタンデザイン
+$btn-font-weight: 700;
+$btn-text-transform: none;
