--- a/templates/initialize/app/assets/style.scss
+++ b/templates/initialize/app/assets/style.scss
@@ -6,6 +6,10 @@
   line-height: 2rem;
   letter-spacing: 0.0125em !important;
   font-family: 'Oswald', sans-serif !important;
+  a {
+    color: inherit !important;
+    text-decoration: none;
+  }
 }
 
 .logo-lg {
@@ -13,4 +17,8 @@
   line-height: 2rem;
   letter-spacing: 0.0125em !important;
   font-family: 'Oswald', sans-serif !important;
+  a {
+    color: inherit !important;
+    text-decoration: none;
+  }
 }
